[resolves #408] Explicitly define heap and perm size for examples server