@@ -48,6 +48,8 @@
     <properties>
         <jboss.home>${project.build.directory}/wildfly-${version.wildfly}</jboss.home>
         <server.config>standalone-camel-examples.xml</server.config>
+        <jvmArgs>-Xmx1G -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true</jvmArgs>
+        <jvmDebugArgs>-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n</jvmDebugArgs>
     </properties>
 
     <!-- Dependencies -->
@@ -132,7 +134,7 @@
         		                <configuration>
                                     <jbossHome>${jboss.home}</jbossHome>
                                     <serverConfig>${server.config}</serverConfig>
-                                    <jvmArgs>-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n</jvmArgs>
+                                    <jvmArgs>${jvmArgs} ${jvmDebugArgs}</jvmArgs>
         		                </configuration>
 		                    </execution>
                             <execution>
@@ -218,7 +220,7 @@
                                 <configuration>
                                     <jbossHome>${jboss.home}</jbossHome>
                                     <serverConfig>${server.config}</serverConfig>
-                                    <jvmArgs>-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n</jvmArgs>
+                                    <jvmArgs>${jvmArgs} ${jvmDebugArgs}</jvmArgs>
                                 </configuration>
 		                    </execution>
                             <execution>
